# Lego_Sorter

./: .gitignore  pyproject.toml  readme.md
colour_determination_pi/: readme.md
identifier_pi/: cameras.py  readme.md  widgets.py
pick_and_place_pi/: data_matrix.py  readme.md  steppers.py
