[project]
name = "lego-sorter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gpiozero>=2.0.1",
    "opencv-python>=4.12.0.88",
    "pylibdmtx>=0.1.10",
    "pyqt6>=6.10.0",
    "rpimotorlib>=3.3",
    "setuptools>=80.9.0",
]
